# hiring-ai-v2-backend

./: .gitignore  DEPLOYMENT.md  README.md  render.yaml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  graph.py  llm.py  registry.py
backend/app/api/: deps.py  router.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/engines/: __init__.py  hiring_health.py  matching.py  resume.py
backend/app/models/: __init__.py  activity.py  assessment.py  candidate.py  company.py  interview.py  job.py  notification.py  offer.py  onboarding.py  recommendation.py  report.py  user.py  verification.py
backend/app/repositories/: __init__.py  activity.py  assessment.py  base.py  candidate.py  company.py  interview.py  job.py  notification.py  offer.py  onboarding.py  recommendation.py  report.py  user.py  verification.py
backend/app/schemas/: agent.py  assessment.py  auth.py  candidate.py  common.py  company.py  dashboard.py  interview.py  job.py  notification.py  offer.py  onboarding.py  recommendation.py  report.py  user.py  verification.py
backend/app/services/: __init__.py  assessment_service.py  auth_service.py  (+14 more)
backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_auth.py  test_engines.py
(+47 files in other folders)
